2005-11-16  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-xslt-pager.c:
	 Fix invalid read (bug #166715)

2005-11-09  Brent Smith  <gnome@nextreality.net>

	* stylesheets/toc2html.xsl:
	improve toc stylesheet performance. 

2005-11-09  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c:
	Handle xref anchors properly, fixes #93721

2005-11-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:	Allow compilation against xulrunner.
	Patch by Robert O'Callahan <rocallahan@novell.com>.

2005-11-07  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-bookmarks.c: 
	Remove warning about non existant bookmark file (from Paolo Borelli)
	Fixes #310097
	
2005-11-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-bookmarks.c, src/yelp-db-pager.c, src/yelp-gecko-utils.cpp,
	* src/yelp-info-pager.c, src/yelp-info-parser.c, 
	* src/yelp-man-pager.c, src/yelp-man-parser.c, 
	* src/yelp-search-pager.c, src/yelp-toc-pager.c, 
	* src/yelp-utils.c, src/yelp-window.c, src/yelp-xslt-pager.c
	Cleanup compiler warnings (casts)

2005-11-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c: 
	Remove warning about `stock_id != NULL' in new window

2005-11-01  Christopher James Lahey  <clahey@ximian.com>

	* src/yelp-search-pager.c: Set base_title property.  Added
	text/x-docbook-entry to mime types.  Always send the search
	request instead of only in debug mode.

	* stylesheets/search2html.xsl: Use base_title property.  Don't
	sort by score.  The C code handles that now (as well as language.)

2005-11-01  Christopher James Lahey  <clahey@ximian.com>

	* src/yelp-search-pager.c: Fix a crash.  Add language sorting.
	Fix some warnings.

2005-11-01  Christopher James Lahey  <clahey@ximian.com>

	* src/gtkentryaction.c (sync_label): Remove extraneous print statement.

	* src/yelp-search-pager.c (d): Remove extraneous print statements.
	(search_pager_process): Check for a NULL beagle_client to handle
	the case of no running beagle daemon.
