@@ -1,3 +1,13 @@
+2005-11-21  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-info-pager.c: 
+	* stylesheets/toc2html.xsl: 
+	* stylesheets/info2html.xsl: 
+	Fix CSS validation errors
+	* data/yelp.js: 
+	Fix js error (from Stuart Langridge)
+	Closes bug #307948
+	
 2005-11-16  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-xslt-pager.c:
